--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.jaiz</groupId>
 	<artifactId>dailyreport</artifactId>
-	<version>2.0.1-SNAPSHOT</version>
+	<version>3.0</version>
 	<packaging>jar</packaging>
 
 	<name>dailyreport</name>
@@ -20,6 +20,12 @@
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.jaiz.utils</groupId>
+			<artifactId>jaiz-utils</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
